--- a/.env.example
+++ b/.env.example
@@ -53,18 +53,46 @@ OPENAI_TEMPERATURE=0.7
 OPENAI_MAX_TOKENS=2048
 
 # ----------------------------------------------------------------------------
-# Anthropic Claude Configuration
+# Anthropic Claude Configuration (Production Ready)
 # ----------------------------------------------------------------------------
 # Get your API key from: https://console.anthropic.com/settings/keys
-# Recommended models: claude-3-5-sonnet-20241022, claude-3-5-haiku-20241022
+# Recommended models:
+#   - claude-3-5-sonnet-20241022 (Best reasoning, $3/MTok input, $15/MTok output)
+#   - claude-3-5-haiku-20241022 (Fast & affordable, $1/MTok input, $5/MTok output)
+#   - claude-opus-4-5-20251101 (Highest intelligence, $15/MTok input, $75/MTok output)
 # Pricing: https://www.anthropic.com/pricing
+# Production Tips:
+#   - Use haiku for simple queries to save costs
+#   - Use sonnet for complex reasoning tasks
+#   - Set max_tokens based on your use case (lower = cheaper)
+#   - Enable caching for repeated prompts (saves up to 90% on input costs)
 # ----------------------------------------------------------------------------
 ANTHROPIC_API_KEY=
 ANTHROPIC_MODEL=claude-3-5-sonnet-20241022
 ANTHROPIC_BASE_URL=
-ANTHROPIC_VERSION=2023-06-01
 ANTHROPIC_TEMPERATURE=0.7
-ANTHROPIC_MAX_TOKENS=2048
+ANTHROPIC_MAX_TOKENS=4096
+
+# ----------------------------------------------------------------------------
+# Google Gemini Configuration (Production Ready)
+# ----------------------------------------------------------------------------
+# Get your API key from: https://aistudio.google.com/app/apikey
+# Recommended models:
+#   - gemini-2.0-flash-exp (Latest, fastest, free tier available)
+#   - gemini-1.5-pro (Advanced reasoning, $1.25/MTok input, $5/MTok output)
+#   - gemini-1.5-flash (Fast & affordable, $0.075/MTok input, $0.30/MTok output)
+# Pricing: https://ai.google.dev/pricing
+# Production Tips:
+#   - Free tier: 15 requests/minute, 1500 requests/day
+#   - Use flash models for cost efficiency
+#   - Gemini supports large context windows (up to 2M tokens)
+#   - Great for multimodal tasks (text, images, video)
+# ----------------------------------------------------------------------------
+GEMINI_API_KEY=
+GOOGLE_API_KEY=
+GEMINI_MODEL=gemini-2.0-flash-exp
+GEMINI_TEMPERATURE=0.7
+GEMINI_MAX_TOKENS=4096
 
 # ----------------------------------------------------------------------------
 # IBM Watsonx Configuration
