--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
     "google-generativeai>=0.3.0",
     "anthropic>=0.39.0",
     "ibm-watsonx-ai>=0.2.0",
-    "openai>=1.0.0"
+    "openai>=1.0.0",
+    "eel>=0.16.0"
 ]
 
 [project.optional-dependencies]
@@ -34,6 +35,7 @@ dev = [
 
 [project.scripts]
 chimera-serve = "backend.main:start"
+chimera-launch = "backend.eel_launcher:main"
 chimera-test = "pytest:main"
 
 [build-system]
